recursion.lessons.recursion.spiral.Spiral.scala.code
def spiral(nbPas:Int, angle:Int, longueur:Int, increment:Int){
	if(nbPas==0){
		return;
	}
	avance(nbPas);
	gauche(angle);
	longueur=longueur + increment;
	
}
	


